# WT26

./: .gitignore  CMakeLists.txt  README.md  add.cu  gpu_store.json  main.cpp  requirements.txt
apps/receiver/: print_gpu_info.py  receiver_service.py
apps/receiver/data/gpu/: receiver_gpu_store.json
apps/sender/: design.txt  sender_client.py
cnnSplit/: model_parallel_rpc.py  run_local_rpc_demo.py  test_train_split.py  train.py
config/: cli_config.json
data/gpu/: network_gpu_store.json  receiver_gpu_store.json  test_gpu_store_2workers.json
legacy_grpc_proto/: transfer.proto
ops/: distributed_cnn_cli.py  network_cli.py  run_received.py
python/: receiver.py
src/: receiver.cpp  sender.cpp
transfer_dashboard_react/: index.html  package-lock.json  package.json
transfer_dashboard_react/src/: App.jsx  styles.css
transfer_python/: cli.py  cli_config.json  gpu_store.json  nvml.py  react_api.py  receiver.py  run_received.py  sender.py
